tests/baselines/reference/errorMessagesIntersectionTypes02.errors.txt
tests/cases/compiler/errorMessagesIntersectionTypes02.ts(14,5): error TS2322: Type '{ fooProp: string; } & Bar' is not assignable to type 'FooBar'.
  Type 'Bar' is not assignable to type 'FooBar'.
    Property 'fooProp' is missing in type 'Bar'.


==== tests/cases/compiler/errorMessagesIntersectionTypes02.ts (1 errors) ====
    interface Foo {
        fooProp: "hello" | "world";
    }
    
    interface Bar {
        barProp: string;
    }
    
    interface FooBar extends Foo, Bar {
    }
    
    declare function mixBar<T>(obj: T): T & Bar;
    
    let fooBar: FooBar = mixBar({
        ~~~~~~
!!! error TS2322: Type '{ fooProp: string; } & Bar' is not assignable to type 'FooBar'.
!!! error TS2322:   Type 'Bar' is not assignable to type 'FooBar'.
!!! error TS2322:     Property 'fooProp' is missing in type 'Bar'.
        fooProp: "frizzlebizzle"
    });